WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48569
Box shadows on vertical inlines don't paint properly.
https://bugs.webkit.org/show_bug.cgi?id=48569
Summary
Box shadows on vertical inlines don't paint properly.
Dave Hyatt
Reported
2010-10-28 15:17:33 PDT
Box shadows on vertical inlines don't paint properly.
Attachments
Patch
(847.17 KB, patch)
2010-10-28 20:38 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(907.19 KB, patch)
2010-10-28 20:41 PDT
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-10-28 20:38:21 PDT
Created
attachment 72290
[details]
Patch
Dave Hyatt
Comment 2
2010-10-28 20:41:26 PDT
Created
attachment 72291
[details]
Patch
mitz
Comment 3
2010-10-28 20:46:57 PDT
Comment on
attachment 72291
[details]
Patch Something is wrong here: look at the pixel results for box-shadow-vertical-*: the shadow isn’t clipped out correctly and you can see white pixels around the corner next to the word “line.”
mitz
Comment 4
2010-10-28 23:22:21 PDT
(In reply to
comment #3
)
> (From update of
attachment 72291
[details]
) > Something is wrong here: look at the pixel results for box-shadow-vertical-*: the shadow isn’t clipped out correctly and you can see white pixels around the corner next to the word “line.”
Actually, that’s a border-radius clipping problem, unrelated to shadows.
Dave Hyatt
Comment 5
2010-10-28 23:30:21 PDT
Fixed in
r70843
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug