https://bugs.webkit.org/show_bug.cgi?id=48569

Reviewed by Dan Bernstein.

Box shadows on vertical inlines don't paint properly.  Fix the paintBoxShadow method to treat the edges to include as
logical (so that top/bottom are used instead of left/right for vertical lines).  In order to make my box-shadow tests
work I had to fix a bug in the transform code of InlineTextBox that was causing the baselines of vertical lines to
be wrong.

Added fast/blockflow/box-shadow-* tests

WebCore:

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBoxShadow):
* rendering/RenderBoxModelObject.h:

LayoutTests:

* fast/blockflow/box-shadow-horizontal-bt.html: Added.
* fast/blockflow/box-shadow-vertical-lr.html: Added.
* fast/blockflow/box-shadow-vertical-rl.html: Added.
* platform/mac/fast/blockflow/border-vertical-lr-expected.checksum:
* platform/mac/fast/blockflow/border-vertical-lr-expected.png:
* platform/mac/fast/blockflow/box-shadow-horizontal-bt-expected.checksum: Added.
* platform/mac/fast/blockflow/box-shadow-horizontal-bt-expected.png: Added.
* platform/mac/fast/blockflow/box-shadow-horizontal-bt-expected.txt: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-lr-expected.checksum: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-lr-expected.png: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-lr-expected.txt: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-rl-expected.checksum: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-rl-expected.png: Added.
* platform/mac/fast/blockflow/box-shadow-vertical-rl-expected.txt: Added.
* platform/mac/fast/blockflow/english-lr-text-expected.checksum:
* platform/mac/fast/blockflow/english-lr-text-expected.png:
* platform/mac/fast/blockflow/english-rl-text-expected.checksum:
* platform/mac/fast/blockflow/english-rl-text-expected.png:
* platform/mac/fast/blockflow/japanese-lr-text-expected.checksum:
* platform/mac/fast/blockflow/japanese-lr-text-expected.png:
* platform/mac/fast/blockflow/japanese-rl-text-expected.checksum:
* platform/mac/fast/blockflow/japanese-rl-text-expected.png:



Canonical link: https://commits.webkit.org/61353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70843 268f45cc-cd09-0410-ab3c-d52691b4dbfc